1. 使用了大神的API，真香... 2. 增加了命令行参数 3. 修复了一些bug

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
-        "php-ffmpeg/php-ffmpeg": "^0.13.0"
+        "php-ffmpeg/php-ffmpeg": "^0.13.0",
+        "metowolf/meting": "^1.5"
     },
     "autoload": {
         "psr-4": {
